Wrap the answers so it can print, until correct layout created.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -62,6 +62,7 @@ html, body {
 
 .answer-page {
     display: flex;
+    flex-wrap: wrap;
 }
 
 #configMenu {
